src/style/_custom.scss
@font-face {
  font-family: "Mona Sans";
  src: url("/assets/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
    url("/assets/fonts/Mona-Sans.woff2") format("woff2-variations");
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

@font-face {
  font-family: "OpMn";
  src: url("/assets/fonts/OperatorMono-Medium.woff2") format("woff2");
  font-style: normal;
  font-weight: 500;
  text-rendering: optimizeLegibility;
}

:root {
  // Aquamarine
  --aquamarine-50: #f6fcfb;
  --aquamarine-100: #d3f2ed;
  --aquamarine-200: #adefe4;
  --aquamarine-300: #82f4e1; // Default
  --aquamarine-400: #6ee2cf;
  --aquamarine-500: #60cfbc;
  --aquamarine-600: #55bbaa;
  --aquamarine-700: #51a597;
  --aquamarine-800: #508d83;
  --aquamarine-900: #4e7972;

  /* Greens */
  --green-50: #e4f4ed;
  --green-100: #c2ecd9;
  --green-200: #9ceac7;
  --green-300: #72f1b8; // Default
  --green-400: #61dea6;
  --green-500: #55ca96;
  --green-600: #4db687;
  --green-700: #4d9c78;
  --green-800: #4d856c;
  --green-900: #4a7360;

  /* Pinks */
  --pink-50: #f1e4ec;
  --pink-100: #e6c4d9;
  --pink-200: #e0a3c8;
  --pink-300: #e17fba;
  --pink-400: #e957b0;
  // --pink-500: #fb28a8; // Default
  --pink-500: #fb37ad; // Default
  --pink-600: #e32397;
  --pink-700: #bf2d85;
  --pink-800: #9e3675;
  --pink-900: #853a67;

  /* Blues */
  --blue-muted-comment: #a9bcce;
  --blue-muted: #55718d;
  --blue-500: #2ee5e5;
  --blue-700: #0e395e;
  --blue-800: #0d2e4e;
  --blue-900: #0a2540;

  // Purples
  --purple-50: #e4deed;
  --purple-100: #9c84c1;
  --purple-200: #8b68c0;
  --purple-300: #7a49c4;
  --purple-400: #6a2cc8;
  --purple-500: #5d16c8;
  --purple-600: #5000ca; // Default
  --purple-700: #4c12a4;
  --purple-800: #471d86;
  --purple-900: #42246f;

  /* Grays */
  --gray-200: #cccccc;
  --gray-600: #4d4d4d;

  // Violet
  --violet-100: #f3daf8;
  --violet-200: #e2b9ea;
  --violet-300: #d0a0da;
  --violet-400: #be8cc8;
  --violet-500: #ac7cb5;
  --violet-600: #9b6fa4;
  --violet-700: #8b6692;

  // Brand colors
  --primary: var(--aquamarine-300);

  --ui-primary: var(--green-300);
  // --ui-secondary: var(--pink-500);
  --ui-secondary: #ffa956;
  // --ui-secondary-a11y: hsl(324, 100%, 60%);
  --ui-secondary-a11y: hsl(29 100% 57%);
  // --ui-surface: hsl(270, 31%, 95%);
  --ui-surface: #fff;
  --ui-bg: hsl(267, 30%, 18%);
  --ui-bg-2: hsl(266, 30%, 15%);
  --ui-bg-3: hsl(289, 27%, 19%);
  // --ui-accent: var(--purple-600);
  --ui-accent: var(--blue-700);

  /* Spacing */
  // --space-8: 6rem;
  // --space-7: 3rem;
  // --space-6: 2rem;
  // --space-5: 1rem;
  // --space-4: 0.75rem;
  --space-3: 0.5rem;
  --space-2: 0.375rem;
  --space-1: 0.25rem;

  --space-9: clamp(3.94rem, calc(3.19rem + 3.75vw), 6rem);
  --space-8: clamp(2rem, calc(1.09rem + 4.55vw), 4.5rem);
  --space-7: clamp(1.31rem, calc(0.7rem + 3.07vw), 3rem);
  --space-6: clamp(1rem, calc(0.55rem + 2.27vw), 2.25rem);
  --space-5: clamp(0.69rem, calc(0.53rem + 0.8vw), 1.13rem);
  --space-4: clamp(0.31rem, calc(0.15rem + 0.8vw), 0.75rem);

  /* Border Radius */
  --bdrs-round: 99rem;
  --bdrs-l: 0.5rem;
  --bdrs-md: 0.375rem;
  --bdrs-sm: 0.1875rem;
}

* {
  --max-screen-size: var(--screen-max, 1200);
  --min-screen-size: var(--screen-min, 375);
  --responsive: (
    (var(--min-font) * 1px) + (var(--max-font) - var(--min-font)) *
      (
        (100vw - (var(--min-screen-size) * 1px)) /
          (var(--max-screen-size) - var(--min-screen-size))
      )
  );
  /* --responsive1: ((var(--min-font) * 1px) + (var(--max-font) - var(--min-font)) * ((100vw - 375px) / (895 - 375))); */
  /*--responsive2: (var(--min-font) * 1px) + (var(--max-font) - var(--min-font)) *
    ((100vw - 896px) / (1200 - 896));*/
}

html {
  /* block-size: 100%; */
  // scroll-padding-block-start: var(--space-7);
  scroll-padding-block-start: var(--space-7);
  touch-action: pan-y;
  scroll-behavior: smooth;
}

body {
  display: flow-root;
  overscroll-behavior: none;
  /* min-height: 100%; */
  /* padding-block: 6rem; */

  // background: #0a2540;
  // background-image: conic-gradient(
  //     at 16.7% calc(100% - 16.7%),
  //     transparent 25%,
  //     hsl(210deg 73% 8%) 0
  //   ),
  //   linear-gradient(to bottom, hsl(182deg 67% 48% / 0.15), transparent),
  //   linear-gradient(to bottom left, hsl(264deg 100% 40% / 20%), transparent 50%);
  // background-size: 4px 4px, 100vw 200vh, 100vw 200vh;
  // background-repeat: repeat, no-repeat, no-repeat;
}

// .front {
//   background: var(--blue-900);
// }

section img {
  background: #f1eef5;
}

/* .place-items {
  place-items: center;
} */

h3 {
  font-family: "Wotfard", Segoe UI, system-ui, -apple-system, sans-serif;
  font-weight: 500;
  --min-font: 22;
  --max-font: 38;
  --screen-max: 1200;
  --screen-min: 375;
  font-size: clamp(
    var(--min-font) * 1px,
    var(--responsive),
    var(--max-font) * 1px
  );
  line-height: 1.125;
}

p {
  font-family: "Mona Sans", "Wotfard", Segoe UI, system-ui, -apple-system,
    sans-serif;
  // font-weight: 300;
  font-weight: 400;
  font-size: 18px;
  --min-font: 16;
  --max-font: 18;
  --screen-max: 1200;
  --screen-min: 375;
  font-size: clamp(
    var(--min-font) * 1px,
    var(--responsive),
    var(--max-font) * 1px
  );
  color: #425466;
}

[contenteditable] {
  outline: none;
}

/*.main-header,*/
footer {
  display: grid;
  grid: auto / minmax(var(--space-5), 1fr) minmax(auto, 1200px) minmax(
      var(--space-5),
      1fr
    );
  gap: var(--space-7) 0;
  text-align: center;
  // margin-block-start: var(--space-7);
  // margin-block-end: var(--space-7);

  padding-block-start: var(--space-7);
  padding-block-end: var(--space-7);
  background: var(--blue-900);
  margin-block-start: var(--space-7);
}

footer > * {
  grid-column: 2 / -2;
  color: var(--ui-secondary, #fb28a8);
  font-weight: 700;
}
/* ... */

